rename for possible fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ModelContainer"
+name = "modelcontainer"
 authors = [{name = "BytePengwin"}]
 version = "0.1.0"
 description = "Simple container for langchain models"
