--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,5 @@ version = "0.1.0"
 description = "Simple container for langchain models"
 requires-python = ">=3.13"
 dependencies = [
-    "langchain>=1.1.0",
-    "langchain-openai>=1.1.0"
+    "httpx>=0.28.1",
 ]
